@@ -1,3 +1,8 @@
+2016-04-28  Ted Thompson  <ted@federalproductions.com>
+
+	* AssemblyInfo.cs:
+	* KOAS-DPCamera.cs: 
+
 2016-04-24  Ted Thompson  <ted@federalproductions.com>
 
 	* AssemblyInfo.cs:
